--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -41,6 +41,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="60dp"
         android:text="@string/enter_old_pass"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/part_change_pass" />
@@ -52,6 +53,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="60dp"
         android:text="@string/enter_new_pass"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/old_pass" />
@@ -63,6 +65,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="60dp"
         android:text="@string/enter_confirm_pass"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/new_pass" />
@@ -79,9 +82,9 @@
         app:layout_constraintStart_toEndOf="@id/new_pass">
 
         <EditText
-            android:hint="@string/old_password"
             android:id="@+id/old_pass_edit"
             style="@style/modifiedEditText"
+            android:hint="@string/old_password"
             android:inputType="textPassword"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -98,9 +101,9 @@
         app:layout_constraintStart_toEndOf="@id/new_pass">
 
         <EditText
-            android:hint="@string/new_password"
             android:id="@+id/new_pass_edit"
             style="@style/modifiedEditText"
+            android:hint="@string/new_password"
             android:inputType="textPassword"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -117,9 +120,9 @@
         app:layout_constraintStart_toEndOf="@id/new_pass">
 
         <EditText
-            android:hint="@string/confirm_new_password"
             android:id="@+id/confirm_pass_edit"
             style="@style/modifiedEditText"
+            android:hint="@string/confirm_new_password"
             android:inputType="textPassword"
             android:maxLines="1" />
 
