--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -277,6 +277,7 @@
         style="@style/loginButton"
         android:layout_marginBottom="20dp"
         android:text="@string/manage_parts"
+        android:visibility="visible"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -287,7 +288,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="20dp"
         android:elevation="8dp"
         android:background="@drawable/profile_bg"
         android:src="@drawable/edit_icon"
