--- a/app/src/main/res/layout/activity_edit_part.xml
+++ b/app/src/main/res/layout/activity_edit_part.xml
@@ -65,11 +65,35 @@
                 android:drawableStart="@drawable/add_circle"
                 android:text="@string/add_image"
                 android:textColor="@color/colorAccent"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="15dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/e_horizontalScrollView"
                 app:layout_constraintEnd_toEndOf="@id/e_horizontalScrollView"
                 app:layout_constraintTop_toBottomOf="@id/e_name_part" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="30dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintBottom_toTopOf="@id/e_pricetxt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/e_name_part">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/e_def_images_scroll"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/test" />
+            </androidx.cardview.widget.CardView>
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/e_horizontalScrollView"
@@ -81,7 +105,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/e_name_part">
-
 
             </androidx.viewpager.widget.ViewPager>
 
@@ -446,7 +469,7 @@
                     android:layout_height="30dp"
                     android:layout_gravity="top|right"
                     android:layout_margin="10dp"
-                    android:src="@drawable/edit_icon" />
+                    android:src="@drawable/expand_icon" />
             </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
