--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -36,9 +36,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/part_details_title">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,7 +49,7 @@
                 android:id="@+id/name_part"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="40dp"
+                android:layout_margin="30dp"
                 android:text="name"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="30sp"
@@ -58,6 +58,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintBottom_toTopOf="@id/pricetxt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/name_part">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/def_images_scroll"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/test" />
+            </androidx.cardview.widget.CardView>
+
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/horizontalScrollView"
                 android:layout_width="320dp"
@@ -65,23 +86,23 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="40dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="20dp"
                 android:elevation="8dp"
                 app:layout_constraintBottom_toTopOf="@id/pricetxt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/name_part">
 
-
             </androidx.viewpager.widget.ViewPager>
+
 
             <TextView
                 android:id="@+id/pricetxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="30dp"
-                android:text="200$"
+                android:text="USD 200"
                 android:textColor="@color/themeColor"
                 android:textSize="35sp"
                 android:textStyle="bold"
