--- a/app/src/main/res/layout/row_image_edit.xml
+++ b/app/src/main/res/layout/row_image_edit.xml
@@ -11,6 +11,7 @@
         android:layout_margin="20dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="8dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,16 +21,18 @@
             android:id="@+id/e_images_scroll"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/test"/>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/e_images_delete"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="top|end"
-            android:layout_margin="10dp"
-            android:src="@drawable/delete_icon"
-            android:elevation="10dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:background="@color/transparent"
+            android:src="@drawable/delete_icon" />
 
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
