--- a/app/src/main/res/layout/activity_add_parts.xml
+++ b/app/src/main/res/layout/activity_add_parts.xml
@@ -305,6 +305,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addPartButton"
                 style="@style/loginButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
