--- a/app/src/main/res/layout/activity_add_parts.xml
+++ b/app/src/main/res/layout/activity_add_parts.xml
@@ -60,6 +60,7 @@
                 app:layout_constraintBottom_toTopOf="@id/addPartHorizontalScrollView"/>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/addPartCardView"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_marginTop="60dp"
@@ -87,6 +88,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="40dp"
+                android:elevation="2dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
