--- a/app/src/main/res/layout/logout_dialog.xml
+++ b/app/src/main/res/layout/logout_dialog.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/rate_alert_dialog"
-    android:orientation="vertical">
+    android:layout_margin="40dp"
+    android:background="@drawable/rate_alert_dialog">
 
     <LinearLayout
-        android:id="@+id/rd_l1"
         android:layout_marginStart="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,28 +18,29 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="@dimen/loginViewsMargin"
-            android:src="@drawable/star_rate_icon" />
+            android:src="@drawable/logout_icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="@dimen/loginViewsMargin"
-            android:text="@string/rate_me"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="@dimen/loginViewsMargin"
+            android:text="@string/logout_title"
             android:textColor="@color/darkTextColor"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-    <RatingBar
-        android:id="@+id/rating_bar"
-        style="@style/Widget.AppCompat.RatingBar"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/loginViewsMargin"
-        android:numStars="5" />
+        android:textColor="@color/darkTextColor"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:text="@string/logout_body"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,29 +48,32 @@
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/loginViewsMargin"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/submit_button"
+            android:id="@+id/lo_yes_button"
             style="@style/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:elevation="4dp"
-            android:text="@string/submit" />
+            android:text="@string/yes" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cancel_button"
+            android:id="@+id/lo_no_button"
             style="@style/reverseLoginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:elevation="4dp"
-            android:text="@string/cancel" />
+            android:text="@string/no" />
 
     </LinearLayout>
 
