--- a/app/src/main/res/layout/row_image_edit.xml
+++ b/app/src/main/res/layout/row_image_edit.xml
@@ -28,6 +28,7 @@
             android:id="@+id/e_images_delete"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:clickable="true"
             android:layout_gravity="top|end"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
