--- a/app/src/main/res/layout/row_image_edit.xml
+++ b/app/src/main/res/layout/row_image_edit.xml
@@ -26,12 +26,12 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/e_images_delete"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:clickable="true"
             android:layout_gravity="top|end"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginTop="@dimen/loginViewsMargin"
+            android:layout_marginEnd="@dimen/loginViewsMargin"
             android:background="@color/transparent"
             android:src="@drawable/delete_icon" />
 
