--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -113,7 +113,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/view2"
                 app:layout_constraintEnd_toStartOf="@id/gl2"
                 app:layout_constraintStart_toStartOf="@+id/gl"
-                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />
+                app:layout_constraintTop_toBottomOf="@+id/p_rating_bar" />
 
             <View
                 android:id="@+id/view2"
