--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -279,6 +279,32 @@
                         app:layout_constraintStart_toStartOf="@id/v_gl"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintBaseline_toBaselineOf="@id/v_bio" />
+                    <TextView
+                        android:id="@+id/v_yearofxp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/yearofxp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="@+id/v_gl"
+                        app:layout_constraintTop_toBottomOf="@id/v_biotext" />
+
+                    <TextView
+                        android:id="@+id/v_yearofxptext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="130dp"
+                        android:layout_marginEnd="30dp"
+                        android:text="text"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="16sp"
+                        app:layout_constraintEnd_toStartOf="@id/v_gl2"
+                        app:layout_constraintStart_toStartOf="@id/v_gl"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintBaseline_toBaselineOf="@id/v_yearofxp" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
